--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <script src="./js/index.js" defer type="module"></script>
 </head>
 <body>
-  <div class="loading" id="loading" hidden></div>
-  <div class="app" id="app">
+  <div class="loading" id="loading"></div>
+  <div class="app" id="app" hidden>
     <div class="currentWeather">
       <p id="current-weather-temp" class="currentWeather-temp"></p>
       <div>
