--- a/index.html
+++ b/index.html
@@ -27,19 +27,14 @@
       <div class="tabs" id="tabs">
         <div class="tabList" role="tablist">
           <div class="tab" role="tab" aria-selected="true" id="tab-0">
-            Lunes
           </div>
           <div class="tab" role="tab" id="tab-1">
-            Martes
           </div>
           <div class="tab" role="tab" id="tab-2">
-            Miercoles
           </div>
           <div class="tab" role="tab" id="tab-3">
-            Jueves
           </div>
           <div class="tab" role="tab" id="tab-4">
-            Viernes
           </div>
         </div>
         <div class="tabPanel" tabindex="0" aria-labelledby="tab-0">
@@ -88,6 +83,18 @@
               </li>
             </ul>
           </div>
+        </div>
+        <div class="tabPanel" tabindex="0" aria-labelledby="tab-1" hidden>
+          tab1
+        </div>
+        <div class="tabPanel" tabindex="0" aria-labelledby="tab-2" hidden>
+          tab2
+        </div>
+        <div class="tabPanel" tabindex="0" aria-labelledby="tab-3" hidden>
+          tab3
+        </div>
+        <div class="tabPanel" tabindex="0" aria-labelledby="tab-4" hidden>
+          tab4
         </div>
       </div>
     </div>
