Definiendo el estado inicial del widget

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <span class="dayWeather-temp">14°</span>
     </li> -->
     <div class="weeklyWeather">
-      <div class="weeklyWeather-marker"></div>
+      <div class="weeklyWeather-marker" data-marker="true"></div>
       <div class="tabs" id="tabs">
         <div class="tabList" role="tablist">
           <div class="tab" role="tab" aria-selected="true" id="tab-0">
