Información extra del clima

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
           </div>
         </div>
       </div>
+      <div class="weather-features">
+        <p class="weather-max">Max: <strong>18°</strong></p>
+        <p class="weather-min">Min: <strong>25°</strong></p>
+        <p class="weather-wind">Viento: <strong>14 km/h</strong></p>
+        <p class="weather-humidity">Humedad: <strong>52%</strong></p>
+      </div>
     </div>
   </div>
 </body>
