--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </div>
       </div>
       <div class="weather-features">
-        <p class="weather-max">Max: <strong>18°</strong></p>
-        <p class="weather-min">Min: <strong>25°</strong></p>
-        <p class="weather-wind">Viento: <strong>14 km/h</strong></p>
-        <p class="weather-humidity">Humedad: <strong>52%</strong></p>
+        <p class="weather-max">Max: <strong></strong></p>
+        <p class="weather-min">Min: <strong></strong></p>
+        <p class="weather-wind">Viento: <strong></strong></p>
+        <p class="weather-humidity">Humedad: <strong></strong></p>
       </div>
     </div>
   </div>
